# jingliu-ap

./: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: clear-teller-pages.yml  pages.yml
clear-teller/: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml
clear-teller/apps/web/: .env.production  index.html  package.json  vite.config.ts  (+1 more)
clear-teller/backend/: alembic.ini  pyproject.toml
clear-teller/backend/src/clear_teller/: __init__.py  config.py  main.py
clear-teller/backend/src/clear_teller/agent/: __init__.py  events.py  mock_engine.py  pipeline.py
clear-teller/backend/src/clear_teller/api/: schemas.py
clear-teller/backend/src/clear_teller/api/routes/: documents.py  health.py
clear-teller/backend/src/clear_teller/db/: __init__.py  models.py  session.py
clear-teller/backend/src/clear_teller/embeddings/: __init__.py  provider.py
clear-teller/backend/src/clear_teller/llm/: __init__.py  router.py
clear-teller/backend/src/clear_teller/migrations/: env.py  script.py.mako
clear-teller/backend/src/clear_teller/migrations/versions/: b2cf599cf690_initial_schema.py
clear-teller/backend/src/clear_teller/rag/: __init__.py  store.py
src/: App.tsx  index.css
src/components/: AIEvidencePanel.tsx  APWorkspace.tsx  AnalyticalTraceLayer.tsx  AppShell.tsx  FlowStageStrip.tsx  JudgmentSurface.tsx  RawSignalPanel.tsx  ReasoningChips.tsx  SideNav.tsx  TaskFilmstrip.tsx  TopHeader.tsx
src/data/: mockApTasks.ts
src/lib/: motion.ts
src/pages/: APJudgmentFlowPage.tsx
src/types/: ap.ts
(+25 files in other folders)
