[project]
name = "clear-teller"
version = "0.0.1"
description = "clear teller — turn messy input into checkable structured output"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

# Heavier ML / provider deps land in later phases (P1+). Kept optional so P0
# installs fast with zero external model dependencies.
[project.optional-dependencies]
ml = [
    "pydantic-ai>=0.0.14",
    "litellm>=1.50",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4",
    "pymupdf>=1.24",
    "python-docx>=1.1",
]
dev = [
    "ruff>=0.8",
    "openapi-spec-validator>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clear_teller"]

[tool.ruff]
line-length = 100
src = ["src"]
# generated Alembic revisions are not hand-maintained
extend-exclude = ["src/clear_teller/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on calls in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]
